# Receptionist_For_Clinics

./: .gitignore  README.md  issue.md  memory.md
Receptionist/: .env.local  .gitignore  livekit.toml  pyproject.toml  skills-lock.json  start.sh
Receptionist/src/: agent.py  cal_tools.py  database.py  memory_tools.py  models.py  patient_tools.py
Receptionist/tests/: conftest.py  test_agent.py  test_database.py  test_memory_tools.py  test_normalize_phone.py  test_volume.py
plan/: feature-permanent-memory-1.md  fix-low-tts-volume-1.md  fix-permanent-memory-issues.md  refactor-backend-stability-1.md
superpowers/specs/: 2026-06-13-voice-receptionist-booking-memory.md
