[project]
name = "receptionist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents>=1.2",
    "livekit-plugins-silero>=0.10",
    "livekit-plugins-ai-coustics>=0.2",
    "livekit-plugins-turn-detector>=0.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
